--- a/01/index.html
+++ b/01/index.html
@@ -5,8 +5,8 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>테스트</title>
-        <link rel="stylesheet" href="./01/styles/index.css">
-        <script src="./01/scripts/index.js"></script>
+        <link rel="stylesheet" href="./styles/index.css">
+        <script src="./scripts/index.js"></script>
         
     </head>
     <body>
