--- a/02/index.html
+++ b/02/index.html
@@ -5,8 +5,8 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>해결문제 - 주사위 굴리기</title>
-        <link rel="stylesheet" href="./02/styles/diceroll.css">
-        <script src="./02/scripts/diceroll.js"></script>
+        <link rel="stylesheet" href="./styles/diceroll.css">
+        <script src="./scripts/diceroll.js"></script>
     </head>
     <body>
         <header>
