이름 수정 및 파일 위치 변경

--- a/02/index.html
+++ b/02/index.html
@@ -13,7 +13,7 @@
             <h1>주사위 게임</h1>
         </header>
         <main>
-            <img class="ran_img" src="./02/images/1.png" alt="">
+            <img class="ran_img" src="./images/1.png" alt="">
             <button class="ran_btn">주사위 굴리기</button>
         </main>
     </body>
