주사위 던지기 마무리

--- a/ex01/index.html
+++ b/ex01/index.html
@@ -13,7 +13,11 @@
         <h1>주사위</h1>
     </header>
     <main id=content>
-        <section id="s1">이미지</section>
+        <section>
+            <div id="s1">
+
+            </div>
+        </section>
         <section id="s2">
             <form name="form1" id="form1">
                 <fieldset>
@@ -27,12 +31,14 @@
                 </fieldset>
             </form>
         </section>
-        <section id="s3"> 
-            ox
+        <section>
+            <div id="s3">
+                <img src="">
+            </div>
         </section>
         <section id="s4">
             <button id="bt1" onclick="showDice();">주사위 선택</button>
-            <button id="bt2" onclick="showDice();">확인</button>
+            <button id="bt2" onclick="showOk();">확인</button>
         </section>
     </main>
 </body>
