--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>응용문제-교수님예제1</title>
-    <link rel="stylesheet" href="./styles/index.css">
-    <script src="./scripts/index.js"></script>
+    <link rel="stylesheet" href="ex01/styles/index.css">
+    <script src="ex01/scripts/index.js"></script>
 </head>
 <body>
     <header>
